Bug 1995943 - Check all potentially related hosts in CSSStyleRule::SelectorMatchesElement. r=emilio,firefox-style-system-reviewers.

Differential Revision: https://phabricator.services.mozilla.com/D269931